resolve bottom row spacing in Work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,22 +114,24 @@ p {
 #projects {
     display:flex;
     flex-wrap:wrap;
-    justify-content:space-between;
+    justify-content:flex-start;
 }
 
 .featured-project {
-    flex:0 1 calc(50% - 1em);
+    flex:0 1 calc(50% - 1.75em);
     background-color:var(--main-accent-color);
     border:2px solid var(--light-color);
     margin-bottom:1em;
+    margin-right:1em;
 }
 
 .project {
-    flex:0 1 calc(25% - 1em);
+    flex:0 1 calc(25% - 1.5em);
     /* display:inline; */
     /* width:50%; */
     border:2px solid var(--main-accent-color);
     margin-bottom:1em;
+    margin-right:1em;
 }
 
 h3 {
@@ -247,12 +249,18 @@ nav a:hover {
         font-size:170%;
     }
 
+    #projects {
+        justify-content:space-between;
+    }
+
     .featured-project {
         flex: 0 1 100%;
+        margin-right: 0em;
     }
     
     .project {
         flex: 0 1 calc(50% - 1em);
+        margin-right: 0em;
     }
 
     footer p {
